Update upload headers styling

--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,18 @@
   <header class="site-header">
     <div class="container header-inner">
       
-      <div class="brand">
+      <a href="index.html" class="brand" style="text-decoration:none;">
         <img src="./assets/Logo.svg" alt="Logo Futurdeco" class="logo">
         Futurdeco
-      </div>
+      </a>
 
       <nav class="nav" aria-label="Navigation principale">
         <a href="#services" class="nav-link">Services</a>
         <a href="#apropos" class="nav-link">À propos</a>
         <a href="#contact" class="nav-link">Contact</a>
-        <a class="btn btn-primary" href="#">Mon compte</a>
+        <a href="upload.html" class="nav-link">Générer</a>
+        <a href="upload_inpaint.html" class="nav-link">Inpaint</a>
+        <a class="btn btn-primary" href="login.html">Connexion</a>
       </nav>
 
       <button id="btnMenu" class="menu-btn" aria-label="Ouvrir le menu">☰</button>
@@ -31,7 +33,9 @@
       <a href="#services" class="mobile-link">Services</a>
       <a href="#apropos" class="mobile-link">À propos</a>
       <a href="#contact" class="mobile-link">Contact</a>
-      <a class="btn btn-primary" href="#">Mon compte</a>
+      <a href="upload.html" class="mobile-link">Générer</a>
+      <a href="upload_inpaint.html" class="mobile-link">Inpaint</a>
+      <a class="btn btn-primary" href="login.html">Connexion</a>
     </div>
   </header>
 
@@ -76,8 +80,8 @@
           <article class="card reveal">
             <div class="card-thumb" style="background-image:url('./assets/prop1.jpg')">Image</div>
             <h3>Auto Staging</h3>
-            <p>Génération automatique de designs d’intérieur via IA — rapide et économique.</p>
-            <a class="link" href="#">Essayer →</a>
+            <p>Génération automatique de designs d'intérieur via IA — rapide et économique.</p>
+            <a class="link" href="upload.html">Essayer →</a>
           </article>
 
           <article class="card reveal">
